# filefinder

./: README.md  meson.build
data/: meson.build  org.konkor.filefinder.gschema.xml
man/: meson.build
src/: filefinder.vala  main.vala  meson.build  tests.vala
src/base/: filter-bin.vala  filter-files.vala  filter-location.vala  filter-mask.vala  filter-mime.vala  filter-modified.vala  filter-none.vala  filter-size.vala  filter-text.vala  filter.vala  plugin.vala  query.vala  service.vala
src/common/: debug.vala  text.vala
src/gui/: column-menu-item.vala  dialog-mime-chooser.vala  excluded-location-list-box.vala  file-finder-window.vala  filter-bar.vala  input-dialog.vala  menu-item-id.vala  mime-button.vala  page-plugin.vala  preferences.vala  query-editor.vala  query-row.vala  results-view.vala  tool-button.vala  toolbar.vala
src/nautilus/: nautilus-extension.vala
