# The icons
install_data (join_paths ('icons', 'scalable', 'apps', '@0@.svg'.format(meson.project_name())),
              install_dir: join_paths (data_dir, 'icons', 'hicolor', 'scalable', 'apps'))

# The templates
install_data (join_paths ('templates', 'template'),
              install_dir: join_paths(data_dir, 'filefinder/templates'))

# The desktop file
install_data ('filefinder.desktop',
              install_dir: join_paths(data_dir, 'applications'))

